# bf-dynasm

./: .bazelrc  .dockerignore  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  Makefile  README.md  WORKSPACE  bf.c  bf_amd64.dasc  bf_arm64.dasc  bf_ast.c  bf_ast.h  bf_debug.c  bf_debug.h  bf_interpreter.dasc  bf_lexer.c  bf_lexer.l  bf_parser.c  bf_parser.h  bf_parser.y  bf_prof.c  bf_prof.h  copts.bzl  luajit.BUILD  mandel_with_debug.txt  profile.txt  test_debug.bf  test_mul.bf  test_mul2.bf  test_mul3.bf
examples/: count.bf  mandelbrot.folded
